# FiberTract

./: README.md
ImageSkeletonalization/: README.md  displaySkeleton.py
ImageSkeletonalization/ITKbinaryThinningImageFilter3D/: BinaryThinning3D.cxx  CMakeLists.txt
ImageSkeletonalization/RecordVoxelPosition/: CMakeLists.txt  recordVoxelPosition.cpp
ReadDTIstudioFiberTract/: FiberStructure.h  fiberTractDTI.cpp
